# netXenium

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  file.nxm  filter.c  main.c  to_ascii.py
abi/include/: gc_header.h  instance.h  netXenium.h  xen_number.h
abi/include/netxenium/: attrs.h  basic_templates.h  gc_header.h  implement.h  instance.h  netXenium.h  run_ctx.h  vm.h  xen_boolean.h  xen_bytes.h  xen_except.h  xen_function.h  xen_gc.h  xen_method.h  xen_module.h  xen_number.h  xen_register.h  xen_string.h  xen_tuple.h  xen_typedefs.h  xen_vector.h
abi/src/: abi.c
api/include/: pcap_wrapper.h  terminal.h
api/src/: functions.c  pcap_wrapper.c  terminal.c
commands/: arp_spoof.c  clear_history.c  del.c  echo.c  exit.c  get.c  help.c  iface.c  input.c  new.c  resolve.c  set.c
core/common/header/: xen_typedefs.h
core/common/include/: attrs.h  callable.h  operators.h  xen_alloc.h  xen_cstrings.h
core/common/src/: attrs.c  callable.c  operators.c  xen_alloc.c  xen_cstrings.c
core/garbage_collector/include/: xen_gc.h
core/garbage_collector/src/: xen_gc.c
core/garbage_collector/types/header/: gc_header.h  gc_heap.h
core/garbage_collector/types/include/: gc_header.h
core/garbage_collector/types/src/: gc_header.c
core/include/: commands.h  program.h  properties_types.h  read_string_utf8.h  xen_life.h
core/instances/basic/include/: basic.h
core/instances/basic/src/: basic.c
core/instances/boolean/include/: xen_boolean.h  xen_boolean_implement.h
core/instances/boolean/src/: xen_boolean_implement.c
core/instances/command/include/: command_implement.h  xen_command.h
core/instances/command/src/: command_implement.c  xen_command.c  xen_command_implement.c
core/instances/igc/include/: xen_igc.h
core/instances/igc/src/: xen_igc.c
core/instances/include/: instance.h  instance_life.h
core/instances/map/include/: xen_map.h
core/instances/map/src/: xen_map.c  xen_map_implement.c
core/instances/nil/include/: xen_nil.h
core/instances/nil/src/: xen_nil_implement.c
core/instances/number/include/: xen_number.h  xen_number_implement.h
core/instances/number/src/: xen_number.c  xen_number_implement.c
core/instances/rust/: Cargo.toml
core/instances/rust/src/: lib.rs
core/instances/src/: instance_life.c
core/instances/string/include/: xen_string.h  xen_string_implement.h
core/instances/string/src/: xen_string.c  xen_string_implement.c
core/instances/types/header/: implement.h
core/instances/types/include/: implement.h  instance.h
core/instances/types/src/: implement.c  instance.c
core/instances/vector/include/: xen_vector.h
core/instances/vector/src/: xen_vector.c  xen_vector_implement.c
core/interpreter/compiler/include/: ast_compiler.h  blocks_compiler.h  blocks_linealizer.h  compiler.h  compiler_ext.h  ir_compiler.h
core/interpreter/compiler/src/: ast_compiler.c  blocks_compiler.c  blocks_linealizer.c  compiler.c  compiler_ext.c
core/interpreter/include/: eval.h  interpreter.h  lexer.h  parser.h  vm.h
core/interpreter/parser/: lex.yy.c  lexer.h  lexer.l  parser.tab.c  parser.tab.h  parser.y
core/interpreter/parser/include/: lexer.h  parser.h  source_file.h
core/interpreter/parser/src/: lexer.c  parser.c  source_file.c
core/interpreter/src/: eval.c  interpreter.c  lexer.c  parser.c  vm.c
core/modules_enginer/include/: xen_module_load.h  xen_modules_def.h
core/modules_enginer/src/: xen_module_load.c  xen_modules_def.c
core/register_enginer/include/: xen_register.h
core/register_enginer/src/: xen_register.c
core/src/: program.c  properties_types.c  read_string_utf8.c  xen_life.c
core/virtual_machine/include/: garbage_collector.h  vm.h  vm_run.h
core/virtual_machine/src/: garbage_collector.c  vm.c  vm_run.c
crates/localtime/: Cargo.toml
crates/localtime/src/: lib.rs
doc/: es_registros.md
dynamic/hash_tables/include/: string_hash_table.h
dynamic/hash_tables/src/: string_hash_table.c
dynamic/linked_lists/include/: list.h  string_utf8.h  suggestion.h
dynamic/linked_lists/src/: history.c  list.c  logs.c  properties.c  raw_arguments.c
dynamic/lists/include/: history.h  list.h  logs.h  properties.h  raw_arguments.h  suggestion.h
dynamic/lists/src/: history.c  list.c  logs.c  properties.c  string_utf8.c  suggestion.c
dynamic/trees/include/: ast.h
dynamic/trees/src/: ast.c
dynamic/vectors/include/: bytecode.h  vm_string_table.h
dynamic/vectors/src/: bytecode.c  vm_string_table.c
dynamic_lists/include/: history.h  list.h  logs.h  properties.h
dynamic_lists/src/: history.c  list.c  logs.c  properties.c  suggestion.c
examples/: change_ip.nxm  resolve_mac.nxm  store_system.nxm  vector.nxm  vector2.nxm
examples/Server/: config.nxm  req.nxm  start.nxm
examples/Server/modules/: http_packet.nxm  http_server.nxm
examples/Server/www/: index.html  not_found.html
examples/UDPChat/: client.nxm  server.nxm
header/: colors.h  error_codes.h  macros.h
include/: commands.h  config_types.h  functions.h  handle_sniff.h  program.h  terminal.h
logger/include/: logger.h
logger/rust/: Cargo.toml
logger/rust/src/: lib.rs
modules/core/include/: m_config.h  m_core.h
modules/core/src/: m_config.c  m_core.c  m_interpreter.c
modules/include/: m_interpreter.h
modules/native/io/: CMakeLists.txt  io.c
modules/native/net/: CMakeLists.txt  net.c
modules/native/net/endpoint/include/: net_endpoint.h
modules/native/net/endpoint/src/: net_endpoint.c
modules/native/net/ip/include/: net_ip.h
modules/native/net/ip/src/: net_ip.c
modules/native/sockets/: CMakeLists.txt  sockets.c
modules/src/: m_core.c  m_interpreter.c
src/: .gitignore  CMakeLists.txt  config.c  config_types.c  errs.c  functions.c  handle_sniff.c  list.c  main.c  pcap_wrapper.c  program.c
src/commands/: arp_spoof.c  exit.c  get.c  help.c  resolve.c  set.c
src/include/: config.h  errs.h  functions.h  list.h  program.h
tests/: test_boolean.c  test_load_script.c  test_main.c  test_map.c  test_modules.c  test_number.c  test_parser.c  test_string.c  test_tuple.c  test_vector.c
(+165 files in other folders)
